categorical embedding training added

--- a/notebooks/draft_perf.ipynb
+++ b/notebooks/draft_perf.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%` not found.\n"
+     ]
+    }
+   ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "% load_ext autoreload\n",
+    "% autoreload 2"
    ],
    "metadata": {
     "collapsed": false,
@@ -17,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "\n",
     "from src.loan_pred.preprocessing.preprocess import convert_dtype"
    ]
   },
@@ -168,6 +176,7 @@
     "    df = df[col_to_select].drop_duplicates()\n",
     "    return df\n",
     "\n",
+    "\n",
     "train_perf = preprocess_loans(train_perf)\n",
     "train_perf.head()"
    ],
@@ -192,7 +201,7 @@
     }
    ],
    "source": [
-    "train_perf.isnull().sum()/train_perf.shape[0] * 100"
+    "train_perf.isnull().sum() / train_perf.shape[0] * 100"
    ],
    "metadata": {
     "collapsed": false,
@@ -241,7 +250,7 @@
     "from src.loan_pred.visualization.visualize import Plots\n",
     "\n",
     "plots = Plots(data=train_perf, cat_cols=[\"good_bad_flag\", \"loannumber\"])\n",
-    "plots.plot_all_cats(nrows=1, ncols=2, figsize=(18,8))"
+    "plots.plot_all_cats(nrows=1, ncols=2, figsize=(18, 8))"
    ],
    "metadata": {
     "collapsed": false,
@@ -256,9 +265,35 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "\n",
     "path = Path(\"../data/preprocessed/train/train_perf.csv\")\n",
     "path.parent.mkdir(parents=True, exist_ok=True)\n",
     "train_perf.to_csv(path, index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                         customerid  loannumber  loanamount  totaldue  \\\n0  8a2a81a74ce8c05d014cfb32a0da1049          12     30000.0   34500.0   \n1  8a85886e54beabf90154c0a29ae757c0           2     15000.0   17250.0   \n2  8a8588f35438fe12015444567666018e           7     20000.0   22250.0   \n3  8a85890754145ace015429211b513e16           3     10000.0   11500.0   \n4  8a858970548359cc0154883481981866           9     40000.0   44000.0   \n\n   termdays good_bad_flag  \n0        30          Good  \n1        30          Good  \n2        15          Good  \n3        15          Good  \n4        30          Good  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customerid</th>\n      <th>loannumber</th>\n      <th>loanamount</th>\n      <th>totaldue</th>\n      <th>termdays</th>\n      <th>good_bad_flag</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8a2a81a74ce8c05d014cfb32a0da1049</td>\n      <td>12</td>\n      <td>30000.0</td>\n      <td>34500.0</td>\n      <td>30</td>\n      <td>Good</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>8a85886e54beabf90154c0a29ae757c0</td>\n      <td>2</td>\n      <td>15000.0</td>\n      <td>17250.0</td>\n      <td>30</td>\n      <td>Good</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8a8588f35438fe12015444567666018e</td>\n      <td>7</td>\n      <td>20000.0</td>\n      <td>22250.0</td>\n      <td>15</td>\n      <td>Good</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>8a85890754145ace015429211b513e16</td>\n      <td>3</td>\n      <td>10000.0</td>\n      <td>11500.0</td>\n      <td>15</td>\n      <td>Good</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>8a858970548359cc0154883481981866</td>\n      <td>9</td>\n      <td>40000.0</td>\n      <td>44000.0</td>\n      <td>30</td>\n      <td>Good</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_perf = pd.read_csv(\"../data/preprocessed/train/train_perf.csv\").drop(\"approveddate\", axis=1)\n",
+    "train_perf.head()"
    ],
    "metadata": {
     "collapsed": false,
