--- a/notebooks/combined_analysis.ipynb
+++ b/notebooks/combined_analysis.ipynb
@@ -27,7 +27,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from torch.utils.data import DataLoader, RandomSampler\n",
     "\n",
@@ -368,42 +367,42 @@
    "execution_count": 210,
    "outputs": [],
    "source": [
-    "from torch import optim\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "# we're setting the positive class weight because the data is imbalanced\n",
-    "pos_weight = y_train.value_counts()[0] / y_train.value_counts()[1]\n",
-    "\n",
-    "criterion = nn.BCEWithLogitsLoss(pos_weight=torch.tensor(pos_weight))\n",
-    "criterion.to(config[\"DEVICE\"])\n",
-    "\n",
-    "optimizer = optim.Adam(emb_model.parameters(), lr=config[\"LR\"])\n",
-    "\n",
-    "y_trues = []\n",
-    "losses = 0.0\n",
-    "probs = []\n",
-    "\n",
-    "emb_model.train()\n",
-    "for batch in train_dataloader:\n",
-    "    y_true = batch[\"y\"].float().to(\"cuda\")\n",
-    "\n",
-    "    logits = emb_model(\n",
-    "        x_cont=batch[\"x_cont\"].to(\"cuda\"),\n",
-    "        x_emb=batch[\"x_emb\"].to(\"cuda\")\n",
-    "    )\n",
-    "\n",
-    "    optimizer.zero_grad()\n",
-    "    loss = criterion(logits.squeeze(1), y_true)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    losses += loss.item() * y_true.size(0)  # Using y_true just to get the len of the batch\n",
-    "    y_trues.extend([int(y.item()) for y in y_true])\n",
-    "    probs.extend([torch.sigmoid(p).item() for p in logits])\n",
-    "\n",
-    "y_preds = [int(p > 0.5) for p in probs]\n",
-    "roc_auc = roc_auc_score(y_true=y_trues, y_score=y_preds)\n",
-    "average_loss = losses / len(train_dataloader.sampler)"
+    "# from torch import optim\n",
+    "# import torch.nn as nn\n",
+    "#\n",
+    "# # we're setting the positive class weight because the data is imbalanced\n",
+    "# pos_weight = y_train.value_counts()[0] / y_train.value_counts()[1]\n",
+    "#\n",
+    "# criterion = nn.BCEWithLogitsLoss(pos_weight=torch.tensor(pos_weight))\n",
+    "# criterion.to(config[\"DEVICE\"])\n",
+    "#\n",
+    "# optimizer = optim.Adam(emb_model.parameters(), lr=config[\"LR\"])\n",
+    "#\n",
+    "# y_trues = []\n",
+    "# losses = 0.0\n",
+    "# probs = []\n",
+    "#\n",
+    "# emb_model.train()\n",
+    "# for batch in train_dataloader:\n",
+    "#     y_true = batch[\"y\"].float().to(\"cuda\")\n",
+    "#\n",
+    "#     logits = emb_model(\n",
+    "#         x_cont=batch[\"x_cont\"].to(\"cuda\"),\n",
+    "#         x_emb=batch[\"x_emb\"].to(\"cuda\")\n",
+    "#     )\n",
+    "#\n",
+    "#     optimizer.zero_grad()\n",
+    "#     loss = criterion(logits.squeeze(1), y_true)\n",
+    "#     loss.backward()\n",
+    "#     optimizer.step()\n",
+    "#\n",
+    "#     losses += loss.item() * y_true.size(0)  # Using y_true just to get the len of the batch\n",
+    "#     y_trues.extend([int(y.item()) for y in y_true])\n",
+    "#     probs.extend([torch.sigmoid(p).item() for p in logits])\n",
+    "#\n",
+    "# y_preds = [int(p > 0.5) for p in probs]\n",
+    "# roc_auc = roc_auc_score(y_true=y_trues, y_score=y_preds)\n",
+    "# average_loss = losses / len(train_dataloader.sampler)"
    ],
    "metadata": {
     "collapsed": false,
@@ -414,19 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.27978515625"
-     },
-     "execution_count": 219,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 220,
+   "outputs": [],
    "source": [
-    "pos_weight"
+    "from torch.optim import lr_scheduler\n",
+    "from torch import optim\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "pos_weight = y_train.value_counts()[0] / y_train.value_counts()[1]\n",
+    "\n",
+    "criterion = nn.BCEWithLogitsLoss(pos_weight=torch.tensor(pos_weight))\n",
+    "criterion.to(config[\"DEVICE\"])\n",
+    "\n",
+    "optimizer = optim.Adam(emb_model.parameters(), lr=config[\"LR\"])\n",
+    "scheduler = lr_scheduler.ReduceLROnPlateau(\n",
+    "    optimizer,\n",
+    "    \"min\",\n",
+    "    patience=10,\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
@@ -451,10 +455,11 @@
     }
    ],
    "source": [
-    "print(f\"Average loss: {average_loss:.2f}\")\n",
-    "print(f\"ROC AUC Score: {roc_auc:.2f}\")\n",
-    "print(y_trues)\n",
-    "print(probs)"
+    "from src.loan_pred.train.engine import engine\n",
+    "\n",
+    "engine(\n",
+    "\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
