hetero graph dataset class added

--- a/notebooks/second_part.ipynb
+++ b/notebooks/second_part.ipynb
@@ -17,13 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
    "source": [
     "import dgl\n",
     "import numpy as np\n",
     "import torch\n",
-    "from torch_geometric.data import HeteroData\n",
     "\n",
     "from loan_pred.helpers.helper import load_pickle\n",
     "from loan_pred.preprocessing.embedding import EmbeddingTransformer\n",
@@ -227,55 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "data = {'id': 0, 'user_id': '8a2a81a74ce8c05d014cfb32a0da1049', 'label': 1, 'node_loans': [\n",
-    "    [1.868964712900149, 1.1342024378353102, 1.1088983044984644, 0.06413962696284115, 0.9105374790315618]], 'node_dg': [\n",
-    "    [-0.16622738032006648, -0.2678823639894638, 0.0, 2.2026453018188477, 1.5976506471633911, -1.425376296043396,\n",
-    "     0.36965134739875793, 1.0473814010620117, 1.9874283075332642, 0.24556586146354675, 1.1803208589553833,\n",
-    "     0.15472577512264252, -1.920318365097046, -0.8908156752586365, -0.6241723299026489, 0.4861326813697815,\n",
-    "     0.34133508801460266, -1.4998971223831177, 0.9083321690559387]], 'node_prevloans': [\n",
-    "    [-0.673771321016832, -0.6975358677579336, -0.6287764937273944, 0.30213165900863986, -0.5569429447405659,\n",
-    "     0.6183781593635554, -0.5432506713248281],\n",
-    "    [1.4804723804160946, -0.6975358677579336, -0.6287764937273944, 0.30213165900863986, 0.4240673261638455,\n",
-    "     0.897377937823334, 0.36500371102529966],\n",
-    "    [1.172723280211391, 0.3753919808058758, 0.4043250555812386, 0.30213165900863986, 2.159700882379343,\n",
-    "     0.6183781593635554, 2.429218216366499],\n",
-    "    [1.7882214806207986, 0.3753919808058758, 0.47128534118457593, 0.30213165900863986, 0.04675568350830268,\n",
-    "     0.897377937823334, 0.11729797038435574],\n",
-    "    [2.0959705808255022, 0.3753919808058758, 0.47128534118457593, 0.30213165900863986, 0.1976803405705198,\n",
-    "     1.0368778270532233, 0.28243513081165167],\n",
-    "    [0.5572250798019833, 0.3753919808058758, 0.4043250555812386, 0.30213165900863986, 3.36709813887708,\n",
-    "     0.6183781593635554, 3.7503154997848664],\n",
-    "    [-0.058273120607424365, 0.3753919808058758, 0.47128534118457593, 0.30213165900863986, 0.4995296546949541,\n",
-    "     0.7578780485934448, 0.6127094516662436],\n",
-    "    [0.8649741800066871, 0.3753919808058758, 0.4043250555812386, 0.30213165900863986, -1.6888778727071945,\n",
-    "     0.6183781593635554, -1.7817793745295476],\n",
-    "    [-0.9815204212215358, -0.6975358677579336, -0.6287764937273944, 0.30213165900863986, -1.3870285585827602,\n",
-    "     0.6183781593635554, -1.4515050536749556],\n",
-    "    [-0.3660222208121282, 0.3753919808058758, 0.47128534118457593, 0.30213165900863986, 0.4240673261638455,\n",
-    "     0.6183781593635554, 0.5301408714525956],\n",
-    "    [0.24947597959727946, 1.4483198293696853, 1.4278608498036804, 0.30213165900863986, 1.556002254130474,\n",
-    "     0.6183781593635554, 1.7686695746573151]]}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "heterograph = HeteroData()\n",
+    "from dgl.data import DGLDataset\n",
     "\n",
-    "heterograph[\"node_loans\"].x = np.array(data[\"node_loans\"])\n",
-    "heterograph[\"node_dg\"].x = np.array(data[\"node_dg\"])\n",
-    "heterograph[\"node_prevloans\"].x = np.array(data[\"node_prevloans\"])"
+    "\n",
+    "class GraphData(DGLDataset):\n",
+    "    def __init__(self):\n",
+    "        super(GraphData, self).__init__()\n",
+    "\n",
+    "    def process(self):\n",
+    "        raise NotImplemented\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        raise NotImplemented\n",
+    "\n",
+    "    def __getitem__(self, item):\n",
+    "        raise NotImplemented\n",
+    "    "
    ],
    "metadata": {
     "collapsed": false,
@@ -286,30 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "HeteroData(\n  \u001B[1mnode_loans\u001B[0m={ x=[1, 5] },\n  \u001B[1mnode_dg\u001B[0m={ x=[1, 19] },\n  \u001B[1mnode_prevloans\u001B[0m={ x=[11, 7] }\n)"
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "heterograph"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "def set_edges(data: dict, graph):\n",
@@ -329,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "graph = set_edges(data, heterograph)"
@@ -343,10 +297,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "outputs": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [16]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      4\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(node_ids) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[0;32m      5\u001B[0m         rel \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mhas\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m node \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_prevloans\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlives\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m----> 6\u001B[0m         \u001B[43mtest_\u001B[49m[(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_loans\u001B[39m\u001B[38;5;124m\"\u001B[39m, rel, node)] \u001B[38;5;241m=\u001B[39m (np\u001B[38;5;241m.\u001B[39marray([\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m*\u001B[39m \u001B[38;5;28mlen\u001B[39m(node_ids)), np\u001B[38;5;241m.\u001B[39marray(node_ids))\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_node_feat\u001B[39m(data):\n\u001B[0;32m     10\u001B[0m     feat_n \u001B[38;5;241m=\u001B[39m {\n\u001B[0;32m     11\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_loans\u001B[39m\u001B[38;5;124m\"\u001B[39m: torch\u001B[38;5;241m.\u001B[39mtensor(data[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_loans\u001B[39m\u001B[38;5;124m\"\u001B[39m]),\n\u001B[0;32m     12\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_dg\u001B[39m\u001B[38;5;124m\"\u001B[39m: torch\u001B[38;5;241m.\u001B[39mtensor(data[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_dg\u001B[39m\u001B[38;5;124m\"\u001B[39m]),\n\u001B[0;32m     13\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_prevloans\u001B[39m\u001B[38;5;124m\"\u001B[39m: torch\u001B[38;5;241m.\u001B[39mtensor(data[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnode_prevloans\u001B[39m\u001B[38;5;124m\"\u001B[39m])\n\u001B[0;32m     14\u001B[0m     }\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'test_' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "feats = {}\n",
+    "test_ = {}\n",
     "for node in [\"node_prevloans\", \"node_dg\"]:\n",
     "    node_ids = list(range(len(data[node])))\n",
     "    if len(node_ids) > 0:\n",
@@ -509,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "data = {'id': 0, 'user_id': '8a2a81a74ce8c05d014cfb32a0da1049', 'label': 1, 'node_loans': [\n",
@@ -550,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "\n",
@@ -576,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "g = dgl.heterograph(test_)\n",
@@ -593,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "features = g.ndata[\"feat\"]\n",
@@ -611,8 +577,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
-   "outputs": [],
+   "execution_count": 21,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'F' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [21]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mdgl\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mnn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpytorch\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mdglnn\u001B[39;00m\n\u001B[0;32m      3\u001B[0m conv1 \u001B[38;5;241m=\u001B[39m dglnn\u001B[38;5;241m.\u001B[39mHeteroGraphConv(\n\u001B[0;32m      4\u001B[0m     {\n\u001B[1;32m----> 5\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mhas\u001B[39m\u001B[38;5;124m'\u001B[39m: dglnn\u001B[38;5;241m.\u001B[39mGraphConv(in_feats\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m, out_feats\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m3\u001B[39m, norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mboth\u001B[39m\u001B[38;5;124m'\u001B[39m, weight\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, bias\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, activation\u001B[38;5;241m=\u001B[39m\u001B[43mF\u001B[49m\u001B[38;5;241m.\u001B[39mrelu),\n\u001B[0;32m      6\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlives\u001B[39m\u001B[38;5;124m'\u001B[39m: dglnn\u001B[38;5;241m.\u001B[39mGraphConv(in_feats\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m, out_feats\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m3\u001B[39m, norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mboth\u001B[39m\u001B[38;5;124m'\u001B[39m, weight\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, bias\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, activation\u001B[38;5;241m=\u001B[39mF\u001B[38;5;241m.\u001B[39mrelu)\n\u001B[0;32m      7\u001B[0m     },\n\u001B[0;32m      8\u001B[0m     aggregate\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msum\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[0;32m      9\u001B[0m )\n\u001B[0;32m     10\u001B[0m conv2 \u001B[38;5;241m=\u001B[39m dglnn\u001B[38;5;241m.\u001B[39mHeteroGraphConv(\n\u001B[0;32m     11\u001B[0m     {\n\u001B[0;32m     12\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mhas\u001B[39m\u001B[38;5;124m'\u001B[39m: dglnn\u001B[38;5;241m.\u001B[39mGraphConv(in_feats\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m, out_feats\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m3\u001B[39m, norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mboth\u001B[39m\u001B[38;5;124m'\u001B[39m, weight\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, bias\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, activation\u001B[38;5;241m=\u001B[39mF\u001B[38;5;241m.\u001B[39mrelu),\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     15\u001B[0m     aggregate\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124msum\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m     16\u001B[0m )\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'F' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import dgl.nn.pytorch as dglnn\n",
     "\n",
